  * Removed logic from Loader to handle deviceId based hierarchy. This is replaced by having different config file for each device type.
  * New option added: --config-dir.
  * Added upstart job definition.
  * Changed init script to use correct config for ncdk.
  * Fixed makefiles to copy correct config files.
  * Modified unit tests to use different configs in different deployments.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 03 Feb 2011 18:46:11 +0200

sensord (0.6.38) unstable; urgency=low

  [Shenghua Liu]
  * Orientation rotation improvement. Fixes: NB#223261
  * Fixes: NB#223772
  * 

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Thu, 03 Feb 2011 11:17:28 +0200

sensord (0.6.37) unstable; urgency=low

  [Antti Virtanen]
  * Optimized Qt container loops to use constBegin() and constEnd().
  * Optimized some funcs to return and take params as const refs when possible.
  * Removed ununsed and deprecated code.
  * AbstractSensorChannel, DeviceAdaptor and SysfsAdaptor now hides internal data.
  * SysfsAdaptor destructor implemented.
  * Fixed few compiler warnings.
  * SocketReader didn't read buffer to empty if it contained more items buffered. Fixed: NB#222132.

  [Shenghua Liu]
  * Partly fixing the random failure problem for contestfw002 test
  * Fix the screen rotation problem, Fixes: NB#219958

  [Timo Rongas]
  * Fixed tapsensor_i slot declation

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 27 Jan 2011 16:08:45 +0200

sensord (0.6.36) unstable; urgency=low

  [Antti Virtanen]
  * SocketHandler improved
    - Socket initialization logic simplified.
    - Error fixed from delayed frame sending.
  * SocketReader improved
    - It now reads from socket to data vector directly.
    - Socket "tag" handling simplified: done during connection establishment.
    - dataReceived() for frame aware sensors simplified.
    - SocketReader::read() will now handle better partially read segments.