@@ -13,6 +13,9 @@ sensord (0.7.0) unstable; urgency=low
   * Fixed makefiles to copy correct config files.
   * Modified unit tests to use different configs in different deployments.
 
+  [Timo Rongas]
+  * Prevent reading values from empty list in SysfsAdaptor
+
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 03 Feb 2011 18:46:11 +0200
 
 sensord (0.6.38) unstable; urgency=low
